--- a/.github/workflows/master_paymentbilling.yml
+++ b/.github/workflows/master_paymentbilling.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: java-app
-        path: '${{ github.workspace }}/target/*.jar'
+        path: '${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,4 +50,4 @@ jobs:
         app-name: 'paymentbilling'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_53b7e45336e6443bb6a847e391cfc706 }}
-        package: '*.jar'
+        package: '*.war'
